apps/mc-ingress/resources/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: mc-ingress-allow
spec:
  endpointSelector:
    matchLabels:
      allow-mc-ingress: "true"
  ingress:
    - toPorts:
        - ports:
            - port: "minecraft"
              protocol: ANY
      fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": ingress
            app.kubernetes.io/name: mc-ingress
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mc-ingress-allow-world
  namespace: ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mc-ingress
  ingress:
    - toPorts:
        - ports:
            - port: "minecraft"
      fromEntities:
        - world
